--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,10 +11,22 @@
   "lang": "es-MX",
   "icons": [
     {
-      "src": "/logo-typo-5.svg",
+      "src": "/favicon.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "categories": ["business", "finance", "productivity"],
