--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.47.0",
     "resend": "^4.6.0",
+    "sharp": "^0.34.3",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.0"
   },
